model preload function added; bug fix
